@@ -1,7 +1,9 @@
-$Id: ChangeLog,v 1.44 2004/04/10 21:24:05 h_oudejans Exp $
+$Id: ChangeLog,v 1.45 2004/04/11 10:45:58 h_oudejans Exp $
 
 2004-04-11 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* joystickport devices are now prepluggable.
+	* fixed UpdateComboSetting for gtk (was corrupted since the new
+	   launch script).
 
 2004-04-10 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* catapult displays pluggables being plugged in on openmsx.
